--- a/src/main/resources/templates/error/500.html
+++ b/src/main/resources/templates/error/500.html
@@ -1,14 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title th:text="#{error.500.title}">Internal Server Error</title>
-    <link rel="stylesheet" th:href="@{/css/style.css}">
-    <link rel="stylesheet" th:href="@{/css/error.css}">
-</head>
+<head th:replace="~{header :: head-common}"></head>
 <body>
 <!-- 헤더 포함 -->
-<div th:replace="~{header :: .top-banner}"></div>
+<div th:replace="~{header :: top-banner}"></div>
 
 <div class="error-container">
     <div class="error-content server-500">
@@ -30,6 +25,6 @@
 </div>
 
 <!-- 푸터 포함 -->
-<div th:replace="~{footer :: .footer}"></div>
+<div th:replace="~{footer :: footer}"></div>
 </body>
 </html>
